54-time-series-for-ontop: reverted changes to initDataTypeTableIfNotExists, replaced List.of, and fixed equality for PRECONFIGURED_SRID